[gd_scene load_steps=12 format=3 uid="uid://bxvfb6l5igfit"]

[ext_resource type="Script" uid="uid://bubtody1f5wtt" path="res://scripts/game.gd" id="1_p57ef"]
[ext_resource type="PackedScene" uid="uid://dyk8nl37i2fp8" path="res://scenes/ground.tscn" id="2_lnu2h"]
[ext_resource type="PackedScene" uid="uid://6ujmasyco4g4" path="res://scenes/ui.tscn" id="2_yqjtg"]
[ext_resource type="PackedScene" uid="uid://hmalvt4uy1yd" path="res://scenes/player.tscn" id="3_lnu2h"]
[ext_resource type="PackedScene" uid="uid://b30ilvyosh3sc" path="res://scenes/static_body_2d.tscn" id="4_lbhrr"]
[ext_resource type="PackedScene" uid="uid://bsvl1kiymkway" path="res://scenes/obstacle_spawner.tscn" id="5_iywne"]
[ext_resource type="Texture2D" uid="uid://iit1rba7i5mo" path="res://assets/Other/GameOver.png" id="7_u5sy4"]
[ext_resource type="Texture2D" uid="uid://e8cv37ueb0y" path="res://assets/Other/Reset.png" id="8_gee14"]
[ext_resource type="AudioStream" uid="uid://vrxwxmayugn4" path="res://sounds/jump.mp3" id="9_kvpfn"]
[ext_resource type="AudioStream" uid="uid://deultb40cslwg" path="res://sounds/die.mp3" id="10_dinhu"]
[ext_resource type="AudioStream" uid="uid://bj26v15b6mlem" path="res://sounds/point.mp3" id="11_kvuet"]

[node name="Game" type="Node2D"]
script = ExtResource("1_p57ef")

[node name="UI" parent="." instance=ExtResource("2_yqjtg")]

[node name="Ground" parent="." instance=ExtResource("2_lnu2h")]
position = Vector2(0, 530)

[node name="Ground2" parent="." instance=ExtResource("2_lnu2h")]
position = Vector2(1202, 530)

[node name="Player" parent="." instance=ExtResource("3_lnu2h")]
position = Vector2(142, 517)

[node name="StaticBody2D" parent="." instance=ExtResource("4_lbhrr")]
position = Vector2(118, 569)

[node name="ObstacleSpawner" parent="." instance=ExtResource("5_iywne")]

[node name="ScoreTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="GameOver" type="Sprite2D" parent="."]
visible = false
position = Vector2(580, 250)
texture = ExtResource("7_u5sy4")

[node name="ResetButton" type="TextureButton" parent="."]
visible = false
offset_left = 533.0
offset_top = 353.0
offset_right = 608.0
offset_bottom = 454.0
texture_normal = ExtResource("8_gee14")

[node name="JumpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_kvpfn")

[node name="DeadSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_dinhu")

[node name="PointsSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_kvuet")

[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="pressed" from="ResetButton" to="." method="_on_reset_button_pressed"]
